Fixed issue #94: Overlay is preventing scrollbar from functioning for large dialogs

--- a/css/ngDialog.css
+++ b/css/ngDialog.css
@@ -76,6 +76,7 @@
   -webkit-backface-visibility: hidden;
   -webkit-animation: ngdialog-fadein 0.5s;
   animation: ngdialog-fadein 0.5s;
+  pointer-events: none;
 }
 
 .ngdialog-no-overlay {
